
    See :ref:`events-model-header`.

    Contributed by **Flavio Curella**.

- Django: :class:`~thorn.ModelEvent` now takes advantage of
  ``Model.get_absolute_url()``.

    Instead of defining a reverser you can now simply have your model
    define a ``get_absolute_url`` method (which is a convention already):

    .. code-block:: python

        class Article(models.Model):

            @models.permalink
            def get_absolute_url(self):
                return 'article:detail', (), {'slug': self.slug}

    For more information on defining this method, refer to the
    Django documentation:
    https://docs.djangoproject.com/en/stable/ref/models/instances/#get-absolute-url

- New :setting:`THORN_SIGNAL_HONORS_TRANSACTION` setting.

    If enabled the Django model events will dispatch only after
    the transaction is committed, and should the transaction be rolled back
    the events are discarded.

    You can also enable this setting on individual events:

    .. code-block:: python

        ModelEvent(..., signal_honors_transaction=True)

    Disabled by default.

    To be enabled by default in Thorn 2.0.

- :class:`~thorn.ModelEvent` now logs errors instead of propagating them.

    ``ModelEvent(propagate_errors=True)`` may be set to revert to the old
    behavior.

- URLs now ordered by scheme,host,port (was host,port,scheme).

- Documentation improvements by:

    - Flavio Curella

.. _version-1.4.2:

1.4.2
=====
:release-date: 2016-07-28 11:45 A.M PDT

- Serialize uuid as string when calling Celery tasks.

.. _version-1.4.1:

1.4.1
=====
:release-date: 2016-07-26 01:06 P.M PDT
:release-by: Ask Solem

- Fixed webhook dispatch crash where validator was deserialized twice.

- Celery dispatcher did not properly forward the `Hook-Subscription`
  HTTP header.

- Source code now using Google-style docstrings.

.. _version-1.4.0:

1.4.0
=====
:release-date: 2016-07-11 04:27 P.M PDT
:release-by: Ask Solem
